Adicionada a pagina individual (por fazer), inicio da verficação dos campos no LoginActivity (com strings por fazer)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewPetFriend">
         <activity
+            android:name=".PaginaIndividualActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
