--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
 
 dependencies {
 
+    implementation "androidx.room:room-runtime:2.4.1"
+    implementation 'androidx.room:room-common:2.4.1'
+    annotationProcessor "androidx.room:room-compiler:2.4.1"
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
