--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -25,12 +26,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation "androidx.room:room-runtime:2.4.1"
     implementation 'androidx.room:room-common:2.4.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     annotationProcessor "androidx.room:room-compiler:2.4.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
