--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_npf_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewPetFriend">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAeUh5VAszcfhJgBgDkIlgoB29tE1zb7GU" />
+
+        <activity
+            android:name=".MapsNewPetFriend"
+            android:exported="false"
+            android:label="@string/title_activity_maps_new_pet_friend" />
         <activity
             android:name=".PaginaIndividualActivity"
             android:exported="false" />
