CRUD de animais com layout na página AdminActivity, acessivel atraves do menu (três pontos no canto superior direito)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.ips.pam.newpetfriend">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_npf"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_npf_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewPetFriend">
-
+        <activity
+            android:name=".AdminActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
